# cudaexamples

./: README.md
CUDA-Programs/: .gitignore
CUDA-Programs/Appendicies/atomicCAS/: atomicCAS.cu
CUDA-Programs/Appendicies/avxsaxpy/: avxsaxpy.cpp
CUDA-Programs/Appendicies/cpusaxpy/: cpusaxpy.cpp
CUDA-Programs/Appendicies/cxbinio/: cxbinio.cpp
CUDA-Programs/Appendicies/gpusaxpy/: gpusaxpy.cu
CUDA-Programs/Appendicies/iter/: iter.cpp
CUDA-Programs/Appendicies/ompsaxpy/: ompsaxpy.cpp
CUDA-Programs/Appendicies/saxpy_vs/: saxpy_vs.cpp
cgtests/: Makefile  Timer.cc  Timer.hh  simple.cu
code-by-example/appendix_a/: Makefile
code-by-example/chapter03/: Makefile
code-by-example/chapter04/: Makefile
code-by-example/chapter05/: Makefile
code-by-example/chapter06/: Makefile
code-by-example/chapter07/: Makefile
code-by-example/chapter08/: Makefile
code-by-example/chapter09/: Makefile
code-by-example/chapter10/: Makefile
code-by-example/chapter11/: Makefile
copilot/: Makefile  testcop.cu
copilot/cmakeplot/: CMakeLists.txt  main.cu
fwichatgpt/: Makefile
fwichatgpt/src/: kernels.cu  kernels.cuh  main.cu
multigpu/: Makefile  complex.hh  multigpu.cu
myexamples/: addmatricesUM.cu  addmatricesUMwrong.cu  block_smid_mapping.cu  coalesced.cu  cudafftex.cu  cudasort.cu  matvecsharedv2.cu  memtransfer.cu  multiplycuda.cu  pinmemtransfer.cu  test_global_memory.cu  timingcuda.cu  two_blocks_occupancy.cu
simple/: Makefile  simple.cu  simple0.cu  simple1.cu  simple2.cu  simple3.cu  simple4.cu  simple5.cu  simple6.cu  simple7.cu
(+148 files in other folders)
